--- a/index.html
+++ b/index.html
@@ -5,54 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ansor</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div>
+    <header class="site-header container">
+        <div class="site-logo">
          <img src="imgs/logo-icon.svg" alt="icon" width="50px" height="50px">
-         <h5>AnsorMed</h5>
+         <h5 class="site-logo-text">AnsorMed</h5>
         </div>
-        <nav>
-            <ul>
-                <li> <a href="#"> Xizmatlar</a></li>
-                <li> <a href="#"> Dorilar</a></li>
-                <li> <a href="#"> Asal</a></li>
-                <li> <a href="#"> Kontaktlar</a></li>
-                <li> <a href="#"> Blog</a></li>
+        <nav class="site-nav" >
+            <ul class="nav-items">
+                <li class="nav-item"> <a href="#"> Xizmatlar</a></li>
+                <li class="nav-item"> <a href="#"> Dorilar</a></li>
+                <li class="nav-item"> <a href="#"> Asal</a></li>
+                <li class="nav-item"> <a href="#"> Kontaktlar</a></li>
+                <li class="nav-item"> <a href="#"> Blog</a></li>
             </ul>
-            <a href="#">Qabulga yozilish</a>
+            <a class="btn-general" href="#">Qabulga yozilish</a>
         </nav>
     </header>
     <main>
         <!-- Takliflar -->
-        <section>
-            <div>
-                <h1>
+        <section class="container">
+            <div class="main-container">
+                <h1 class="main-container-text-h1">
                     Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.
                 </h1>
-                <p>
+                <p class="main-container-text-p">
                     Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.
                 </p>
-                <a href="#">Qabulga yozilish</a>
+                <a class="btn-general" href="#">Qabulga yozilish</a>
             </div>
-            <img src="imgs/hero-img.svg" alt="img">
+            <img class="main-img" src="imgs/hero-img.svg" alt="img">
         </section>
         <!-- Hizmatlar -->
-        <section>
-            <h2>
+        <section class="service container">
+            <h2 class="service-text-h2">
                 Xizmatlar
             </h2>
             <div>
-                <img src="imgs/image 1.svg" alt="">
-                <h3>
+                <img class="service-img" src="imgs/image 1.svg" alt="">
+                <h3 class="service-text-h3">
                     Hijoma
                 </h3>
-                <p>
+                <p class="service-text-p">
                     Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).
                 </p>
             </div>
             <div>
-                <img src="imgs/image 2.svg" alt="">
+                <img class="service-img" src="imgs/image 2.svg" alt="">
                 <h3>
                     Manual terapiya
                 </h3>
@@ -61,47 +62,47 @@
                 </p>
             </div>
             <div>
-                <img src="imgs/image 3.svg" alt="">
-                <h3>
+                <img class="service-img" src="imgs/image 3.svg" alt="">
+                <h3 class="service-text-h3">
                     Zuluk bilan davolash
                 </h3>
-                <p>
+                <p class="service-text-p" >
                     Girudoterapiya (lot. hirūdō — «zuluk» va qad. yun. θεραπεία — «davolash») — ma’lum kasalliklarni dorivor zuluklar (Hirudo medicinalis) yordamida davolash usuli. Fizioterapevtik muolaja, muqobil tibbiyotga oid sanaladi. Bunday zuluklar ushbu kichik sinf chuvchalchanglariga oid yagona tur hisoblanadi, qolganlari shifobaxsh ta’sir ko’rsatmaydi.
                 </p>
             </div>
             <div>
-                <img src="imgs/image 3 (1).svg" alt="">
-                <h3>
+                <img class="service-img" src="imgs/image 3 (1).svg" alt="">
+                <h3 class="service-text-h3">
                     Tabiiy dori vositalari
                 </h3>
-                <p>
+                <p class="service-text-p">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.
                 </p>
             </div>
-            <a href="#">Qabulga yozilish</a>
+            <a class="btn-general" href="#">Qabulga yozilish</a>
         </section>
-        <section>
+        <section class="admin container">
             <h1>
                 Qabulga ro’yxatdan o’ting
             </h1>
-            <div>
+            <div class="admin-link">
                 <a href="#">Qo’ng’iroq qilish</a>
                 <a href="#">Telegramdan yozish</a>
             </div>
         </section>
     </main>
-    <footer>
-        <div>
-            <img src="imgs/logo-icon.svg" alt="icon" width="50px" height="50px">
+    <footer class="site-footer container">
+        <div class="footer-logo" >
+            <img   src="imgs/logo-icon.svg" alt="icon" width="50px" height="50px">
             <h5>AnsorMed</h5>
            </div>
-           <nav>
-               <ul>
-                   <li> <a href="#"> Xizmatlar</a></li>
-                   <li> <a href="#"> Dorilar</a></li>
-                   <li> <a href="#"> Asal</a></li>
-                   <li> <a href="#"> Kontaktlar</a></li>
-                   <li> <a href="#"> Blog</a></li>
+           <nav class="footer-nav-items">
+               <ul >
+                   <li class="footer-nav-itme"> <a href="#"> Xizmatlar</a></li>
+                   <li class="footer-nav-itme"> <a href="#"> Dorilar</a></li>
+                   <li class="footer-nav-itme"> <a href="#"> Asal</a></li>
+                   <li class="footer-nav-itme"> <a href="#"> Kontaktlar</a></li>
+                   <li class="footer-nav-itme"> <a href="#"> Blog</a></li>
                </ul>
            </nav>
     </footer>
