--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <!-- Takliflar -->
-        <section class="container">
+        <section class="main container">
             <div class="main-container">
                 <h1 class="main-container-text-h1">
                     Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.
@@ -43,7 +43,7 @@
             <h2 class="service-text-h2">
                 Xizmatlar
             </h2>
-            <div>
+            <div class="service-div">
                 <img class="service-img" src="imgs/image 1.svg" alt="">
                 <h3 class="service-text-h3">
                     Hijoma
@@ -52,7 +52,7 @@
                     Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).
                 </p>
             </div>
-            <div>
+            <div class="service-div">
                 <img class="service-img" src="imgs/image 2.svg" alt="">
                 <h3>
                     Manual terapiya
@@ -61,7 +61,7 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.
                 </p>
             </div>
-            <div>
+            <div class="service-div">
                 <img class="service-img" src="imgs/image 3.svg" alt="">
                 <h3 class="service-text-h3">
                     Zuluk bilan davolash
@@ -70,7 +70,7 @@
                     Girudoterapiya (lot. hirūdō — «zuluk» va qad. yun. θεραπεία — «davolash») — ma’lum kasalliklarni dorivor zuluklar (Hirudo medicinalis) yordamida davolash usuli. Fizioterapevtik muolaja, muqobil tibbiyotga oid sanaladi. Bunday zuluklar ushbu kichik sinf chuvchalchanglariga oid yagona tur hisoblanadi, qolganlari shifobaxsh ta’sir ko’rsatmaydi.
                 </p>
             </div>
-            <div>
+            <div class="service-div">
                 <img class="service-img" src="imgs/image 3 (1).svg" alt="">
                 <h3 class="service-text-h3">
                     Tabiiy dori vositalari
