--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
             <h2 class="service-text-h2">
                 Xizmatlar
             </h2>
-            <div class="service-div">
+            <div class="service-div asos">
                 <img class="service-img" src="imgs/image 1.svg" alt="">
                 <h3 class="service-text-h3">
                     Hijoma
+
                 </h3>
                 <p class="service-text-p">
                     Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).
@@ -54,7 +55,7 @@
             </div>
             <div class="service-div">
                 <img class="service-img" src="imgs/image 2.svg" alt="">
-                <h3>
+                <h3 class="service-text-h3">
                     Manual terapiya
                 </h3>
                 <p>
@@ -81,7 +82,7 @@
             </div>
             <a class="btn-general" href="#">Qabulga yozilish</a>
         </section>
-        <section class="admin container">
+            <section class="admin container">
             <h1>
                 Qabulga ro’yxatdan o’ting
             </h1>
