--- a/index.html
+++ b/index.html
@@ -45,42 +45,49 @@
             </h2>
             <div class="service-div asos">
                 <img class="service-img" src="imgs/image 1.svg" alt="">
-                <h3 class="service-text-h3">
-                    Hijoma
-
-                </h3>
-                <p class="service-text-p">
-                    Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).
-                </p>
+                <div class="text">
+                    <h3 class="service-text-h3">
+                        Hijoma
+                    </h3>
+                    <p class="service-text-p">
+                        Imom Termiziy Abdulloh ibn Abbos raziyallohu anhumodan rivoyat qilgan hadisda rasululloh sallallohu alayhi va sallam dedilar: «Sizlar hijoma qiladigan kunlaringizning eng yaxshisi 17, 19 va 21-kunlardir» (bu kunlar hijrij-kamariy hisobdagi oylar kunlaridir).
+                    </p>
+                </div>
             </div>
             <div class="service-div">
                 <img class="service-img" src="imgs/image 2.svg" alt="">
-                <h3 class="service-text-h3">
-                    Manual terapiya
-                </h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.
-                </p>
+                <div class="text">
+                    <h3 class="service-text-h3">
+                        Manual terapiya
+                    </h3>
+                    <p class="service-text-p">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.
+                    </p>
+                </div>
             </div>
             <div class="service-div">
                 <img class="service-img" src="imgs/image 3.svg" alt="">
-                <h3 class="service-text-h3">
-                    Zuluk bilan davolash
-                </h3>
-                <p class="service-text-p" >
-                    Girudoterapiya (lot. hirūdō — «zuluk» va qad. yun. θεραπεία — «davolash») — ma’lum kasalliklarni dorivor zuluklar (Hirudo medicinalis) yordamida davolash usuli. Fizioterapevtik muolaja, muqobil tibbiyotga oid sanaladi. Bunday zuluklar ushbu kichik sinf chuvchalchanglariga oid yagona tur hisoblanadi, qolganlari shifobaxsh ta’sir ko’rsatmaydi.
-                </p>
+                <div class="text">
+                    <h3 class="service-text-h3">
+                        Zuluk bilan davolash
+                    </h3>
+                    <p class="service-text-p" >
+                        Girudoterapiya (lot. hirūdō — «zuluk» va qad. yun. θεραπεία — «davolash») — ma’lum kasalliklarni dorivor zuluklar (Hirudo medicinalis) yordamida davolash usuli. Fizioterapevtik muolaja, muqobil tibbiyotga oid sanaladi. Bunday zuluklar ushbu kichik sinf chuvchalchanglariga oid yagona tur hisoblanadi, qolganlari shifobaxsh ta’sir ko’rsatmaydi.
+                    </p>
+                </div>
             </div>
             <div class="service-div">
                 <img class="service-img" src="imgs/image 3 (1).svg" alt="">
-                <h3 class="service-text-h3">
-                    Tabiiy dori vositalari
-                </h3>
-                <p class="service-text-p">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.
-                </p>
+                <div class="text">
+                    <h3 class="service-text-h3">
+                        Tabiiy dori vositalari
+                    </h3>
+                    <p class="service-text-p">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac metus placerat, pellentesque enim ac, rhoncus lectus. Maecenas et posuere lorem. Fusce sed massa sit amet elit viverra hendrerit.
+                    </p>
+                </div>
             </div>
-            <a class="btn-general" href="#">Qabulga yozilish</a>
+            <div class="btn-service"><a class="btn-general " href="#">Qabulga yozilish</a></div>
         </section>
             <section class="admin container">
             <h1>
