--- a/index.html
+++ b/index.html
@@ -89,15 +89,18 @@
             </div>
             <div class="btn-service"><a class="btn-general " href="#">Qabulga yozilish</a></div>
         </section>
-            <section class="admin container">
-            <h1>
-                Qabulga ro’yxatdan o’ting
-            </h1>
-            <div class="admin-link">
-                <a href="#">Qo’ng’iroq qilish</a>
-                <a href="#">Telegramdan yozish</a>
-            </div>
-        </section>
+         <section class="admin container">
+                <div class="admin-heading">
+                    <h1>
+                        Qabulga ro’yxatdan o’ting
+                    </h1>
+                                
+                    <div class="admin-links">
+                    <a class="admin-link" href="#">Qo’ng’iroq qilish</a>
+                    <a class="admin-link" href="#">Telegramdan yozish</a>
+                    </div>
+                </div>
+         </section>
     </main>
     <footer class="site-footer container">
         <div class="footer-logo" >
