--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
             <img   src="imgs/logo-icon.svg" alt="icon" width="50px" height="50px">
             <h5>AnsorMed</h5>
            </div>
-           <nav class="footer-nav-items">
-               <ul >
-                   <li class="footer-nav-itme"> <a href="#"> Xizmatlar</a></li>
-                   <li class="footer-nav-itme"> <a href="#"> Dorilar</a></li>
-                   <li class="footer-nav-itme"> <a href="#"> Asal</a></li>
-                   <li class="footer-nav-itme"> <a href="#"> Kontaktlar</a></li>
-                   <li class="footer-nav-itme"> <a href="#"> Blog</a></li>
+           <nav >
+               <ul class="footer-nav-items" >
+                   <li > <a class="footer-nav-itme" href="#"> Xizmatlar</a></li>
+                   <li > <a class="footer-nav-itme" href="#"> Dorilar</a></li>
+                   <li > <a class="footer-nav-itme" href="#"> Asal</a></li>
+                   <li > <a class="footer-nav-itme" href="#"> Kontaktlar</a></li>
+                   <li > <a class="footer-nav-itme" href="#"> Blog</a></li>
                </ul>
            </nav>
     </footer>
